--- a/flower.html
+++ b/flower.html
@@ -21,9 +21,12 @@
 
         /* 确保玫瑰花 canvas 和文字在爱心之上 */
         #roseCanvas {
-            position: relative;
-            z-index: 1;
-        }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
 
         .text-container {
             position: relative;
